Add support for the podPriorityClass field in HTTP01 podTemplate
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/deploy/crds/crd-challenges.yaml
+++ b/deploy/crds/crd-challenges.yaml
@@ -568,9 +568,10 @@ spec:
                                       type: string
                               spec:
                                 description: PodSpec defines overrides for the HTTP01
-                                  challenge solver pod. Only the 'nodeSelector', 'affinity'
-                                  and 'tolerations' fields are supported currently.
-                                  All other fields will be ignored.
+                                  challenge solver pod. Only the 'priorityClassName',
+                                  'nodeSelector', 'affinity' and 'tolerations' fields
+                                  are supported currently. All other fields will be
+                                  ignored.
                                 type: object
                                 properties:
                                   affinity:
@@ -1374,6 +1375,9 @@ spec:
                                     type: object
                                     additionalProperties:
                                       type: string
+                                  priorityClassName:
+                                    description: If specified, the pod's priorityClassName.
+                                    type: string
                                   tolerations:
                                     description: If specified, the pod's tolerations.
                                     type: array
@@ -2038,9 +2042,10 @@ spec:
                                       type: string
                               spec:
                                 description: PodSpec defines overrides for the HTTP01
-                                  challenge solver pod. Only the 'nodeSelector', 'affinity'
-                                  and 'tolerations' fields are supported currently.
-                                  All other fields will be ignored.
+                                  challenge solver pod. Only the 'priorityClassName',
+                                  'nodeSelector', 'affinity' and 'tolerations' fields
+                                  are supported currently. All other fields will be
+                                  ignored.
                                 type: object
                                 properties:
                                   affinity:
@@ -2844,6 +2849,9 @@ spec:
                                     type: object
                                     additionalProperties:
                                       type: string
+                                  priorityClassName:
+                                    description: If specified, the pod's priorityClassName.
+                                    type: string
                                   tolerations:
                                     description: If specified, the pod's tolerations.
                                     type: array
@@ -3509,9 +3517,10 @@ spec:
                                       type: string
                               spec:
                                 description: PodSpec defines overrides for the HTTP01
-                                  challenge solver pod. Only the 'nodeSelector', 'affinity'
-                                  and 'tolerations' fields are supported currently.
-                                  All other fields will be ignored.
+                                  challenge solver pod. Only the 'priorityClassName',
+                                  'nodeSelector', 'affinity' and 'tolerations' fields
+                                  are supported currently. All other fields will be
+                                  ignored.
                                 type: object
                                 properties:
                                   affinity:
@@ -4315,6 +4324,9 @@ spec:
                                     type: object
                                     additionalProperties:
                                       type: string
+                                  priorityClassName:
+                                    description: If specified, the pod's priorityClassName.
+                                    type: string
                                   tolerations:
                                     description: If specified, the pod's tolerations.
                                     type: array
