--- a/deploy/crds/crd-clusterissuers.yaml
+++ b/deploy/crds/crd-clusterissuers.yaml
@@ -649,9 +649,10 @@ spec:
                                             type: string
                                     spec:
                                       description: PodSpec defines overrides for the
-                                        HTTP01 challenge solver pod. Only the 'nodeSelector',
-                                        'affinity' and 'tolerations' fields are supported
-                                        currently. All other fields will be ignored.
+                                        HTTP01 challenge solver pod. Only the 'priorityClassName',
+                                        'nodeSelector', 'affinity' and 'tolerations'
+                                        fields are supported currently. All other
+                                        fields will be ignored.
                                       type: object
                                       properties:
                                         affinity:
@@ -1588,6 +1589,9 @@ spec:
                                           type: object
                                           additionalProperties:
                                             type: string
+                                        priorityClassName:
+                                          description: If specified, the pod's priorityClassName.
+                                          type: string
                                         tolerations:
                                           description: If specified, the pod's tolerations.
                                           type: array
@@ -2573,9 +2577,10 @@ spec:
                                             type: string
                                     spec:
                                       description: PodSpec defines overrides for the
-                                        HTTP01 challenge solver pod. Only the 'nodeSelector',
-                                        'affinity' and 'tolerations' fields are supported
-                                        currently. All other fields will be ignored.
+                                        HTTP01 challenge solver pod. Only the 'priorityClassName',
+                                        'nodeSelector', 'affinity' and 'tolerations'
+                                        fields are supported currently. All other
+                                        fields will be ignored.
                                       type: object
                                       properties:
                                         affinity:
@@ -3512,6 +3517,9 @@ spec:
                                           type: object
                                           additionalProperties:
                                             type: string
+                                        priorityClassName:
+                                          description: If specified, the pod's priorityClassName.
+                                          type: string
                                         tolerations:
                                           description: If specified, the pod's tolerations.
                                           type: array
@@ -4499,9 +4507,10 @@ spec:
                                             type: string
                                     spec:
                                       description: PodSpec defines overrides for the
-                                        HTTP01 challenge solver pod. Only the 'nodeSelector',
-                                        'affinity' and 'tolerations' fields are supported
-                                        currently. All other fields will be ignored.
+                                        HTTP01 challenge solver pod. Only the 'priorityClassName',
+                                        'nodeSelector', 'affinity' and 'tolerations'
+                                        fields are supported currently. All other
+                                        fields will be ignored.
                                       type: object
                                       properties:
                                         affinity:
@@ -5438,6 +5447,9 @@ spec:
                                           type: object
                                           additionalProperties:
                                             type: string
+                                        priorityClassName:
+                                          description: If specified, the pod's priorityClassName.
+                                          type: string
                                         tolerations:
                                           description: If specified, the pod's tolerations.
                                           type: array
