chart: add option to run webhook in hostNetwork
Signed-off-by: João Francisco <jfrancisco@veniam.com>

--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -232,6 +232,14 @@ webhook:
   # rules or requiring NET_BIND_SERVICE capabilities to bind port numbers <1000
   securePort: 10250
 
+  hostNetwork:
+    # Specifies if the webhook should be started in hostNetwork mode.
+    #
+    # Required for use in managed kubernetes clusters (such as AWS EKS) with custom
+    # CNI (such as calico), because control-plane managed by AWS cannot communicate
+    # with pods' IP CIDR and admission webhooks are not working
+    enabled: false
+
 cainjector:
   enabled: true
   replicaCount: 1
