chart: clarify only some deployments need hostNetwork
Signed-off-by: João Francisco <jfrancisco@veniamworks.com>

--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -234,7 +234,7 @@ webhook:
 
   # Specifies if the webhook should be started in hostNetwork mode.
   #
-  # Required for use in managed kubernetes clusters (such as AWS EKS) with custom
+  # Required for use in some managed kubernetes clusters (such as AWS EKS) with custom
   # CNI (such as calico), because control-plane managed by AWS cannot communicate
   # with pods' IP CIDR and admission webhooks are not working
   #
