--- a/pkg/issuer/acme/dns/util/BUILD.bazel
+++ b/pkg/issuer/acme/dns/util/BUILD.bazel
@@ -9,8 +9,8 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/pkg/issuer/acme/dns/util",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/logs:go_default_library",
         "@com_github_miekg_dns//:go_default_library",
-        "@io_k8s_klog_v2//:go_default_library",
     ],
 )
 
