--- a/pkg/issuer/vault/BUILD.bazel
+++ b/pkg/issuer/vault/BUILD.bazel
@@ -15,8 +15,8 @@ go_library(
         "//pkg/controller:go_default_library",
         "//pkg/internal/vault:go_default_library",
         "//pkg/issuer:go_default_library",
+        "//pkg/logs:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
-        "@io_k8s_klog_v2//:go_default_library",
     ],
 )
 
