--- a/pkg/internal/apis/acme/install/BUILD.bazel
+++ b/pkg/internal/apis/acme/install/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "//pkg/internal/apis/acme/v1alpha3:go_default_library",
         "//pkg/internal/apis/acme/v1beta1:go_default_library",
         "//pkg/internal/apis/acme/validation:go_default_library",
+        "//pkg/internal/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
     ],
